--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -1,5 +1,5 @@
 body {
-  background: #ded6ce;
+  background: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
