--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -102,7 +102,7 @@ input[type="submit"] {
 button[type="button"] {
   display: block;
   appearance: none;
-  background: #333;
+  background: "white";
   color: white;
   border: none;
   text-transform: uppercase;
