--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -1,5 +1,5 @@
 body {
-  background: #ded6ce;
+  background: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -28,7 +28,7 @@ p {
   color: #c87b94;
 }
 
-p::before {
+p.error::before {
   display: inline;
   content: "⚠ ";
 }
@@ -40,18 +40,16 @@ input {
   border-radius: 4px;
   border: 1px solid white;
   padding: 10px 15px;
-  margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 1em;
+  height: 2rem;
 }
 
 label {
-  line-height: 2;
   text-align: left;
   display: block;
-  margin-bottom: 13px;
   margin-top: 20px;
   color: #333;
-  font-size: 14px;
+  font-size: 0.8em;
   font-weight: 200;
 }
 
@@ -61,8 +59,8 @@ input[type="submit"] {
   color: #333;
   text-transform: uppercase;
   border: none;
-  margin-top: 40px;
-  padding: 20px;
+  margin-top: 10px;
+  padding: 5px;
   font-size: 16px;
   font-weight: 100;
   letter-spacing: 10px;
@@ -104,7 +102,7 @@ input[type="submit"] {
 button[type="button"] {
   display: block;
   appearance: none;
-  background: #333;
+  background: "white";
   color: white;
   border: none;
   text-transform: uppercase;
@@ -128,6 +126,9 @@ button {
 }
 .flex {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 h5 {
   color: #333;
