--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -155,3 +155,11 @@ h5 {
 .hide {
   display: none;
 }
+.time {
+  padding: 0 5px 10px;
+}
+.modal-dialog {
+  width: 80%;
+  margin: auto;
+  top: 15%;
+}
