--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -47,7 +47,7 @@ input {
 label {
   text-align: left;
   display: block;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   color: #333;
   font-size: 0.8em;
   font-weight: 200;
