chore: detail change for buttons in login and sign up

--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -117,9 +117,9 @@ hr {
 button {
   display: block;
   appearance: none;
-  margin-top: 40px;
+  margin-top: 10px;
   border: 1px solid #333;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   text-transform: uppercase;
   padding: 10px 20px;
   border-radius: 4px;
